--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "next": "^13.0.1",
+    "pocketbase": "^0.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.55.0",
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.36.2",
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.26.0",
+    "eslint-config-next": "^13.0.1",
+    "eslint-plugin-import-helpers": "^1.3.1",
     "postcss": "^8.4.18",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "3.1.8"
   }
 }
